256 ==> 431357 - Face attribution doesn't get the name selected in the contextual menu.
257 ==> 431355 - There is no button to add Tag to picture.
258 ==> 297291 - Allow to quick edit metadata using keyboard shortcuts.
259 ==> 431369 - Lens search uses only exact match (as I see).
260 ==> 431400 - "Find duplicates" Without Selecting An Album Locks Up Duplicates Feature.
261 ==> 431403 - Cannot Drag and Drop When Using Similarity.
262 ==> 431470 - Wrong keystroke behavior while editing face tag.
263 ==> 237010 - Remove __DATE__ and __TIME__ from code.
264 ==> 431614 - Tags are not written to secondary pictures if grouped by name.
265 ==> 431598 - digiKam-7.2.0-rc (14.01.2021) crashes while getting "Help > List of Detected Hardware".
266 ==> 431660 - BQM stores output files one directory level above actual target.
267 ==> 216412 - Show warning message before album deletion when directories containing files which are not shown by digiKam.
268 ==> 431150 - Thumbs for faces created from .DNG images are not shown.
269 ==> 431658 - digiKam git trash issue.
270 ==> 269424 - Rebuild all thumbnails misses people (faces) thumbnails.
271 ==> 431808 - Program icon not visible.
272 ==> 144177 - In Caption/Tags sidebar, new Tags inherit the image of their parents.
273 ==> 421043 - Faces Detection crashes digiKam.
274 ==> 427333 - Face detection crashes due to pure virtual method call in LoadingCache.
275 ==> 429307 - Crash with face detection under Windows.
276 ==> 427380 - Crashes when running face detection.
277 ==> 431907 - Authentication to Google fails with "This browser or app may not be secure."
278 ==> 431964 - Face tags are not read correctly on certain images with more than one Microsoft People Tags XMP metadata.
279 ==> 431831 - How much data gets sent to digikam.org for face recognition.
280 ==> 432066 - Preview does not update when changing the photo using the keyboard in geolocation editor.
281 ==> 