@@ -299,4 +299,5 @@ BUGFIXES:
 278 ==> 431964 - Face tags are not read correctly on certain images with more than one Microsoft People Tags XMP metadata.
 279 ==> 431831 - How much data gets sent to digikam.org for face recognition.
 280 ==> 432066 - Preview does not update when changing the photo using the keyboard in geolocation editor.
-281 ==> 
+281 ==> 432048 - XMP People/Face tags with no associated regions are ignored by Digikam (Person Shown, MWG Face name, MS People Tag).
+282 ==> 
